syntax = "proto3";
package user;
option go_package = "./user";
import "google/api/annotations.proto";
// import "protoc-gen-openapiv2/options/annotations.proto";
// import "common.proto";

message IdRequest {
    string id = 1;
}
  
message UserResponse {
    // 用户id
    string id = 1;
    // 用户名称
    string name = 2;
    // 用户性别
    string gender = 3;
}
  

service User {
    rpc getUser(IdRequest) returns(UserResponse){
      option (google.api.http) = {
        post: "/api/v1/user/getuser"
        body: "*"
      };
      // option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      //   summary: "List item types"
      //   description: "List all item types on the server."
      //   tags: "ItemTypes"
      // };
    }
}